--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "module": "narratives.js",
   "browser": "narratives.min.js",
   "scripts": {
+    "lint": "prettier --write '**/*.{js,mjs,ts,md,json}' && eslint",
     "build-browser": "esbuild index.ts --format=iife --global-name=gramex.narratives --bundle --sourcemap --minify --outfile=narratives.min.js",
     "build-esm": "esbuild index.ts --format=esm --bundle --minify --allow-overwrite --outfile=narratives.js",
     "build": "npm run build-browser && npm run build-esm",
+    "prepublishOnly": "npm run lint && npm run build",
     "test": "jest"
   },
   "files": [
@@ -30,10 +32,32 @@
       "**/*.test.ts"
     ]
   },
+  "prettier": {
+    "printWidth": 100
+  },
+  "eslintConfig": {
+    "root": true,
+    "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+    },
+    "env": {
+      "browser": true,
+      "es2022": true,
+      "jest": true
+    },
+    "plugins": [
+      "html"
+    ],
+    "extends": "eslint:recommended"
+  },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
     "esbuild": "0.17.10",
+    "eslint": "^8.48.0",
+    "eslint-plugin-html": "^7.1.0",
     "jest": "^29.4.3",
+    "prettier": "^3.0.3",
     "ts-jest": "^29.0.5",
     "typedoc": "^0.24.0-beta.2",
     "typescript": "^4.9.5"
