--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "module": "narratives.js",
   "browser": "narratives.min.js",
   "scripts": {
-    "lint": "prettier --write '**/*.{js,mjs,ts,md,json}' && eslint",
     "build-browser": "esbuild index.ts --format=iife --global-name=gramex.narratives --bundle --sourcemap --minify --outfile=narratives.min.js",
     "build-esm": "esbuild index.ts --format=esm --bundle --minify --allow-overwrite --outfile=narratives.js",
     "build": "npm run build-browser && npm run build-esm",
-    "prepublishOnly": "npm run lint && npm run build",
+    "prepublishOnly": "npm run build",
     "test": "jest"
   },
   "files": [
     "narratives.*"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:gramener/gramex-narratives"
+  },
   "keywords": [
     "gramex",
     "narratives",
@@ -23,7 +26,10 @@
     "statistics"
   ],
   "author": "S Anand <root.node@gmail.com>",
-  "license": "AGPL-3.0-or-later",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/gramener/gramex-narratives/issues"
+  },
   "jest": {
     "transform": {
       "^.+\\.ts$": "ts-jest"
@@ -32,32 +38,10 @@
       "**/*.test.ts"
     ]
   },
-  "prettier": {
-    "printWidth": 100
-  },
-  "eslintConfig": {
-    "root": true,
-    "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
-    },
-    "env": {
-      "browser": true,
-      "es2022": true,
-      "jest": true
-    },
-    "plugins": [
-      "html"
-    ],
-    "extends": "eslint:recommended"
-  },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
     "esbuild": "0.17.10",
-    "eslint": "^8.48.0",
-    "eslint-plugin-html": "^7.1.0",
     "jest": "^29.4.3",
-    "prettier": "^3.0.3",
     "ts-jest": "^29.0.5",
     "typedoc": "^0.24.0-beta.2",
     "typescript": "^4.9.5"
