--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "module": "narratives.js",
   "browser": "narratives.min.js",
   "scripts": {
-    "build-browser": "esbuild index.ts --format=iife --global-name=gramex.narratives --bundle --sourcemap --minify --outfile=narratives.min.js",
-    "build-esm": "esbuild index.ts --format=esm --bundle --minify --allow-overwrite --outfile=narratives.js",
+    "build-browser": "npx -y esbuild index.ts --format=iife --global-name=gramex.narratives --bundle --sourcemap --minify --outfile=narratives.min.js",
+    "build-esm": "npx -y esbuild index.ts --format=esm --bundle --minify --allow-overwrite --outfile=narratives.js",
     "build": "npm run build-browser && npm run build-esm",
     "prepublishOnly": "npm run build",
     "test": "jest"
@@ -40,10 +40,8 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
-    "esbuild": "0.17.10",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
-    "typedoc": "^0.24.0-beta.2",
-    "typescript": "^4.9.5"
+    "typedoc": "^0.24.0-beta.2"
   }
 }
